# ferrum

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml
.github/workflows/: rust.yml
crates/editor-standalone/: Cargo.toml
crates/editor-standalone/src/: editor.rs  main.rs
crates/ferrum-assets/: Cargo.toml  README.md
crates/ferrum-assets/src/: lib.rs
crates/ferrum-bin/: Cargo.toml  README.md
crates/ferrum-bin/src/: main.rs
crates/ferrum-cli/: Cargo.toml  README.md
crates/ferrum-graph/: Cargo.toml  README.md
crates/ferrum-graph/src/: lib.rs
crates/ferrum-graph/src/frostbite_graph/: allocator.rs  blackboard.rs  frame_graph.rs  frame_graph_resource.rs  graph_node.rs  mod.rs  pass_entry.rs  pass_node.rs  render_context.rs  resource_entry.rs  resource_node.rs
crates/ferrum-graph/src/frostbite_graph/addition/: frame_graph_texture.rs  mod.rs
crates/ferrum-macros/: Cargo.toml
crates/ferrum-math/: Cargo.toml  README.md
crates/ferrum-physics/: Cargo.toml  README.md
crates/ferrum-render/: Cargo.toml
crates/ferrum-render/src/: lib.rs
crates/ferrum-render/src/core/: app.rs  device.rs  frame_buffers.rs  gpu_buffer.rs  instance.rs  mod.rs  phys_device.rs  pipeline.rs  queue.rs  render_pass.rs  shaders.rs  surface.rs  swapchain.rs  texture.rs  utils.rs
crates/ferrum-render/src/errors/: app.rs  instance.rs  mod.rs  phys_dev.rs
crates/ferrum-render/src/render/: render_context.rs
crates/ferrum-render/src/render/graphics_device/: app.rs  device.rs  instance.rs  mod.rs
crates/ferrum-render/src/render/standart_pipeline/: mod.rs
crates/ferrum-render/src/render/window_manager/: frame_buffers.rs  graphics_device.rs  image_views.rs  mod.rs  present_formats.rs  present_modes.rs  render_pass.rs  surface.rs  swapchain.rs
crates/ferrum-resources/: Cargo.toml  README.md
crates/ferrum-script/: Cargo.toml  README.md
crates/ferrum-script/src/: lib.rs
crates/ferrum-sound/: Cargo.toml  README.md
crates/ferrum-ui/: Cargo.toml  README.md
crates/ferrum-ui/src/: lib.rs
examples/cube/: Cargo.toml
examples/cube/src/: main.rs
shared/shaders/: triangle.frag  triangle.vert
shared/shaders/spv/: ray-tracing-frag.spv  triangle-frag.spv  triangle-vert.spv
