[package]
name = "ferrum"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/ferrum-physics",
    "crates/ferrum-assets",
    "crates/ferrum-render",
    "crates/ferrum-cli",
    "crates/ferrum-graph",
    "crates/ferrum-sound",
    "crates/ferrum-ui",
    "crates/ferrum-bin",
    "examples/cube",
    "crates/ferrum-resources",
    "crates/ferrum-math"
]
resolver = "2"

