[package]
name = "ferrum-render"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Pavlenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olejaaaaaaaa/ferrum/crates/ferrum-render"
keywords = [
    "graphics",
    "gpu",
    "vulkan"
]

[dependencies]
ash = { version = "0.38.0",  features = ["debug", "std"] }
ash-window = "0.13.0"
winit = { version = "0.29", features = ["rwh_06"] }
log = "0.4"
env_logger = { version = "0.11.8", features = ["color"] }
cfg-if = { version = "1" }
vk-mem = "0.5.0"
thiserror = "2.0.15"

[features]
default = ["vma", "fsr1"]
dlss = []
vma = []
gpu-allocator = []
fsr1 = []
fsr2 = []
