[package]
name = "ferrum-ui"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Pavlenko"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olejaaaaaaaa/ferrum/crates/ferrum-ui"

[dependencies]
thiserror = "2.0"
log = "0.4"
ash = { version = "0.38", default-features = false, features = ["std"] }
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"], optional = true }
vk-mem = { version = "0.4", optional = true }
simple_logger = "5.0"
winit = { version = "0.29", features = ["rwh_06"] }
ash-window = "0.13"
raw-window-handle = "0.6"
image = "0.25"
egui = "0.32"
egui-winit = "0.32"
egui_demo_lib = "0.32"
egui_extras = { version = "0.32", default-features = false, features = ["all_loaders"] }
egui-ash-renderer = { git = "https://github.com/adrien-ben/egui-ash-renderer", features = []}